--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@blexar/framework": "0.0.33",
+    "simple-vue-validator": "^0.16.0",
     "vee-validate": "2.1.7",
     "vue": "^2.6.14",
     "vue-router": "3.0.2",
