--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "dependencies": {
     "@blexar/framework": "0.0.33",
     "simple-vue-validator": "^0.16.0",
-    "vee-validate": "2.1.7",
     "vue": "^2.6.14",
     "vue-router": "3.0.2",
+    "vue-trix": "^1.2.0",
     "vuex": "3.1.0"
   },
   "devDependencies": {
