--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@blexar/framework": "0.0.33",
+    "element-ui": "^2.15.6",
     "simple-vue-validator": "^0.16.0",
     "vue": "^2.6.14",
+    "vue-json-editor": "^1.4.3",
     "vue-router": "3.0.2",
     "vue-trix": "^1.2.0",
     "vuex": "3.1.0"
